Import of MOLT/Tie-Assert-0.11 from CPAN.
gitpan-cpan-distribution: Tie-Assert
gitpan-cpan-version:      0.11
gitpan-cpan-path:         MOLT/Tie-Assert-0.11.tar.gz
gitpan-cpan-author:       MOLT
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Tie::Assert - Enforces restrictions on variables' contents
 
 VERSION
-    This document refers to version 0.1_01 of Tie::Assert, released October
+    This document refers to version 0.11 of Tie::Assert, released October
     6th 2004.
 
 SYNOPSIS
