Import of MOLT/Tie-Assert-0.12 from CPAN.
gitpan-cpan-distribution: Tie-Assert
gitpan-cpan-version:      0.12
gitpan-cpan-path:         MOLT/Tie-Assert-0.12.tar.gz
gitpan-cpan-author:       MOLT
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Tie::Assert 
 
+0.12   - The Build.PL had 'requires' typoed as 'required', breaking the
+          installation on machines without B::Flags.  This has been
+	  fixed.
 0.11   - Rationalised the version number, no actual code/doc changes beyond
           this
 0.1_01 - Added the README file.	
