Import of MOLT/Tie-Assert-0.13 from CPAN.
gitpan-cpan-distribution: Tie-Assert
gitpan-cpan-version:      0.13
gitpan-cpan-path:         MOLT/Tie-Assert-0.13.tar.gz
gitpan-cpan-author:       MOLT
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Tie::Assert 
 
+0.20   - Major changes.  The addition of the Tie::Assert::Array and
+          Tie::Assert::Hash classes, and a rewriting of the internal
+	  representation of filters to support this.
 0.12   - The Build.PL had 'requires' typoed as 'required', breaking the
           installation on machines without B::Flags.  This has been
 	  fixed.
